[project]
name = "language-steering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "torch>=2.0",
    "transformers>=5.5.3",
    "accelerate>=0.30",
    "nnterp",
    "torchvision>=0.26.0",
    "pillow>=12.2.0",
]
